[package]
name = "rust-webhook-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
hex = "0.4.3"
hmac = "0.12.1"
once_cell = "1.17.1"
serde = {version = "1.0.159", features=["derive"]}
serde-enum-str = "0.3.2"
serde_json = "1.0.95"
sha2 = "0.10.6"
tokio = {version = "1.27.0", features=["full"]}
toml = "0.7.3"
