[package]
name = "github-webhook-server"
version = "1.0.0"
edition = "2021"
description = "This application will automatically updates local GitHub repositories and triggers a command once the update is complete. This can be extremely useful, for example, for automating deployment to a production server."
authors = ["Luca Coduri"]
license = "apache-2.0"
repository = "https://github.com/LucaCoduriV/github-webhook-server"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
hex = "0.4.3"
hmac = "0.12.1"
log = "0.4.17"
pretty_env_logger = "0.4"
once_cell = "1.17.1"
serde = {version = "1.0.159", features=["derive"]}
serde-enum-str = "0.3.2"
serde_json = "1.0.95"
sha2 = "0.10.6"
tokio = {version = "1.27.0", features=["macros", "rt-multi-thread"]}
toml = "0.7.3"
clap = {version = "4.2.1", features=["cargo", "derive"]}
